--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Attendances#create</h1>
-<p>Find me in app/views/attendances/create.html.erb</p>
+
+<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
