--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,18 +1,23 @@
-<%= form_tag event_attendances_path do %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
-      </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: $5.00</span>
-    </label>
-  </article>
+<div class="container mt-3">
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+  <%= render 'events/event_full'%>
+
+  <%= form_tag event_attendances_path do %>
+    <article>
+      <% if flash[:error].present? %>
+        <div id="error_explanation">
+          <p><%= flash[:error] %></p>
+        </div>
+      <% end %>
+      <label class="amount">
+        <span> Montant : <%=@event.price%> € </span>
+      </label>
+    </article>
+
+    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="A month's subscription"
-          data-amount="500"
-          data-locale="auto"></script>
-<% end %>
+          data-amount="<%=@event.price * 100 %>"
+          data-locale="fr"></script>
+  <% end %>
+</div>
