--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,23 +42,14 @@
   </div>
 </nav>
 <div class="container">
-  <% 
-  
-  def flash_class(level)
-    case level
-    when :notice then 'alert alert-info'
-    when :success then 'alert alert-success'
-    when :warning then 'alert alert-warning'
-    when :error then 'alert alert-error'
-    when :alert then 'alert alert-error'
-    else
-      'alert alert-primary'
-    end
-  end
-  flash.each do |key, value| 
-
+  <% flash.each do |key, value|
+  type = 'secondary'
+  type = 'success' if %i[success].include?(key.to_sym)
+  type = 'primary' if %i[notice info].include?(key.to_sym)
+  type = 'danger' if %i[alert error].include?(key.to_sym)
+  type = 'warning' if %i[warning].include?(key.to_sym)
   %>
-  <div class="<%= flash_class(key) %>">
+  <div class="alert alert-<%= type %>">
     <%= value %>
   </div>
 <% end %>
