--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,5 +1,12 @@
 <div class="col-lg-4 mb-3 mt-2">
   <div class="card mb-4 box-shadow h-100">
+    <div class="card-img-top">
+      <% if event.picture.attached? %>
+        <%= image_tag event.picture, alt: 'Card image cap', class: "rounded mx-auto d-block", height: 200 %>
+      <% else %>
+        <img class="rounded mx-auto d-block" src="https://images.unsplash.com/photo-1597075095391-f15c2f9f359a?w=200&q=80" alt="Card image cap" height=200>
+      <% end %>
+    </div>
     <div class="card-body d-flex flex-column">
       <p class="card-text"> <%= event.title %> </p>
       <div class="d-flex justify-content-between align-items-center mt-auto">
