--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -59,6 +59,8 @@
 
       <% end %>
 
+      <%= link_to "Ajouter une image ?", new_event_picture_path(@event), {class: "btn btn-lg btn-block btn-outline-primary mt-4"} %>
+
       <%= link_to "SUPPRIMER l'événement !", event_path(@event), {method: :delete, class: "btn btn-lg btn-block btn-danger mt-4", data: {confirm: "C'est vraiment sur ?"}} %>
 
     </div>
