--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
+ * # =require_tree .
+ * # =require_self
+ *
+ *= require main
  */
-.jumbotron {
-    background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg');
-    background-size: cover;
-    height: 100%;
-  }
