--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,43 +1,38 @@
-<nav class="navbar navbar-expand bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="<%= root_path %>"> Eventbrite </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
-      aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
+    <div class="collapse navbar-collapse ml-auto" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
           <a class="nav-link" href="<%= events_path %>"> Evénements </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Other link</a>
-        </li> !-->
-      </ul>
-      <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, :class => "nav-link btn btn-secondary text-white  btn-sm mr-2" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Mon compte", profile_path,:class => "nav-link btn btn-outline-primary text-black btn-sm" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%=current_user.name%>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+              <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, :class => "dropdown-item" %>
+              <%= link_to "Mon compte", profile_path,:class => "dropdown-item" %>
+            </div>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Se connecter", new_user_session_path, :class => "nav-link btn btn-outline-primary btn-sm mr-2" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "S'inscrire'", new_user_registration_path, :class => "nav-link btn btn-outline-success btn-sm" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Inscription/Connection
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+              <%= link_to "Se connecter", new_user_session_path, :class => "dropdown-item" %>
+              <%= link_to "S'inscrire'", new_user_registration_path,:class => "dropdown-item" %>
+            </div>
           </li>
         <% end %>
       </ul>
-      <!-- <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-      </form> -->
     </div>
   </div>
 </nav>
