--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,11 @@
 
   <body>
     <%= render partial: "shared/navbar" %>
-    <%= yield %>
-  </body>
 
+    <%= render partial: "shared/alerts" %>
+
+    <%= yield %>
+
+    <%= render partial: "shared/footer" %>
+  </body>
 </html>
