--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,11 +1,13 @@
-<% content_for :application_content do %>
-  <div class="container">
-    <div class="card border-primary mb-3 mt-4">
-      <div class="card-header text-primary">
-        <h4> <%= @devise_title or "The Hacking Bot" %> </h4>
-      </div>
-      <div class="card-body">
-        <%= content_for?(:devise_content) ? yield(:devise_content) : yield %>
+<% content_for :main do %>
+  <div class="container d-flex justify-content-center">
+    <div class="col-lg-8">
+      <div class="card border-secondary">
+        <div class="card-header text-primary">
+          <h4> <%= @devise_title or "Formulaire" %> </h4>
+        </div>
+        <div class="card-body py-4">
+          <%= content_for?(:devise) ? yield(:devise) : yield %>
+        </div>
       </div>
     </div>
   </div>
