--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -3,10 +3,11 @@
   type = 'secondary'
   type = 'success' if %i[success].include?(key.to_sym)
   type = 'primary' if %i[notice info].include?(key.to_sym)
-  type = 'danger' if %i[alert error].include?(key.to_sym)
-  type = 'warning' if %i[warning].include?(key.to_sym)
+  type = 'danger' if %i[error].include?(key.to_sym)
+  type = 'warning' if %i[alert warning].include?(key.to_sym)
   %>
-  <div class="alert alert-<%= type %>">
+  <div class="alert alert-<%= type %> alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
     <%= value %>
   </div>
 <% end %>
