--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,61 +1,36 @@
-<div class="row">
+<% @devise_title = "Formulaire d'inscription"%>
 
-  <div class="col-md-6 offset-md-3">
-    <br>
-    <%= form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" } do |f| %>
+<%= render partial: 'shared/errors', locals: {object: resource} %>
 
-      <h1 class="h3 mb-3 font-weight-normal text-center"> Inscription</h1>
+<%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
 
-      <%= devise_error_messages! %>
-
-      <!-- EMAIL !-->
-      <div class="form-group">
-        <%= f.label :email, "Email" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-      </div>
-
-      <!-- FIRST NAME !-->
-      <div class="form-group">
-        <%= f.label :first_name, "Prénom" %><br />
-        <%= f.text_field :first_name, autocomplete: "first_name", class: "form-control" %>
-      </div>
-
-      <!-- LAST NAME !-->
-      <div class="form-group">
-        <%= f.label :last_name, "Nom" %><br />
-        <%= f.text_field :last_name, autocomplete: "last_name", class: "form-control" %>
-      </div>
-
-      <!-- DESCRIPTION !-->
-      <div class="form-group">
-        <%= f.label :description, "Description" %><br />
-        <%= f.text_area :description, class: "form-control" %>
-      </div>
-
-      <!-- MOT DE PASSE !-->
-      <div class="form-group">
-        <%= f.label :password, "Mot de passe" %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> caractères minimum)</em>
-        <% end %>
-        <br>
-        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-      </div>
-
-      <!-- CONFIRMATION !-->
-      <div class="form-group">
-        <%= f.label :password_confirmation, "Confirmation du mot de passe" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-      </div>
-
-      <!-- SUBMIT !-->
-      <div class="actions mt-5">
-        <%= f.submit "Inscription", class: "btn btn-lg btn-primary btn-block" %>
-      </div>
-
-    <% end %>
-
-    <%= render "devise/shared/links" %>
-
+  <!-- EMAIL !-->
+  <div class="form-group">
+    <%= f.label :email, "Email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
   </div>
-</div>
+
+  <!-- MOT DE PASSE !-->
+  <div class="form-group">
+    <%= f.label :password, "Mot de passe" %>
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> caractères minimum)</em>
+    <% end %>
+    <br>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+  </div>
+
+  <!-- CONFIRMATION !-->
+  <div class="form-group">
+    <%= f.label :password_confirmation, "Confirmation du mot de passe" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+  </div>
+
+  <!-- SUBMIT !-->
+  <div class="actions mt-5">
+    <%= f.submit "Inscription", class: "btn btn-lg btn-primary btn-block" %>
+  </div>
+
+  <%= render "devise/shared/links" %>
+
+<% end %>
