--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,13 +1,22 @@
+<% @page_title = "Eventbrite | #{@devise_title or "Formulaire"}"%>
 <% content_for :main do %>
   <div class="container d-flex justify-content-center">
     <div class="col-lg-8">
-      <div class="card border-secondary">
-        <div class="card-header text-primary">
+      <div class="card border-secondary text-<%=@devise_color or 'secondary'%>">
+        <div class="card-header">
           <h4> <%= @devise_title or "Formulaire" %> </h4>
         </div>
         <div class="card-body py-4">
           <%= content_for?(:devise) ? yield(:devise) : yield %>
         </div>
+        <% if content_for?(:devise_second) %>
+          <div class="card-header">
+            <h4> <%= @devise_second_title or "Formulaire" %> </h4>
+          </div>
+          <div class="card-body py-4">
+            <%= yield :devise_second %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
