--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,38 +1,32 @@
-<div class="row">
+<% @devise_title = "Formulaire de création d'un nouveau mot de passe "%>
+<% @devise_color = "success "%>
 
-  <div class="col-md-6 offset-md-3">
-    <br>
+<%= render partial: 'shared/errors', locals: {object: resource} %>
 
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-      <h1 class="h3 mb-3 font-weight-normal text-center"> Inscription</h1>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
 
-      <%= devise_error_messages! %>
+  <%= f.hidden_field :reset_password_token %>
 
-      <%= f.hidden_field :reset_password_token %>
-
-      <!-- MOT DE PASSE !-->
-      <div class="form-group">
-        <%= f.label :password, "Mot de passe" %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> caractères minimum)</em>
-        <% end %>
-        <br>
-        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-      </div>
-
-      <!-- CONFIRMATION !-->
-      <div class="form-group">
-        <%= f.label :password_confirmation, "Confirmation du mot de passe" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-      </div>
-      <!-- SUBMIT !-->
-      <div class="actions mt-5">
-        <%= f.submit "Inscription", class: "btn btn-lg btn-primary btn-block" %>
-      </div>
-
+  <!-- MOT DE PASSE !-->
+  <div class="form-group">
+    <%= f.label :password, "Mot de passe" %>
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> caractères minimum)</em>
     <% end %>
-
-    <%= render "devise/shared/links" %>
-
+    <br>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
   </div>
-</div>
+
+  <!-- CONFIRMATION !-->
+  <div class="form-group">
+    <%= f.label :password_confirmation, "Confirmation du mot de passe" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+  </div>
+  <!-- SUBMIT !-->
+  <div class="actions mt-5">
+    <%= f.submit "Modifier le mot de passe", class: "btn btn-lg btn-#{devise_color} btn-block" %>
+  </div>
+
+<% end %>
+
+<%= render "devise/shared/links" %>
