--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,5 @@
 <% @devise_title = "Formulaire de mise à jour de mes informations "%>
+<% @devise_color = "dark "%>
 
 <%= render partial: 'shared/errors', locals: {object: resource} %>
 
@@ -46,11 +47,12 @@
 
   <!-- SUBMIT !-->
   <div class="actions mt-5">
-    <%= f.submit "Mettre à jour mes informations", class: "btn btn-lg btn-primary btn-block" %>
+    <%= f.submit "Mettre à jour mes informations", class: "btn btn-lg btn-#{@devise_color} btn-block" %>
   </div>
+  <%= link_to "Back", :back %>
 
 <% end %>
-
-<h1 class="h3 my-4 font-weight-normal text-center"> Supprimer le compte</h1>
-<%= button_to "Supprimer définitivement", registration_path(resource_name), data: { confirm: "C'est sûr ?" }, method: :delete, class: "btn btn-lg btn-danger" %>
-<%= link_to "Back", :back %>
+<% content_for :devise_second do%>
+  <% @devise_second_title="Supprimer le compte" %>
+  <%= button_to "Supprimer définitivement", registration_path(resource_name), data: { confirm: "C'est sûr ?" }, method: :delete, class: "btn btn-lg btn-danger" %>
+<% end %>
