--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,17 +1,7 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4 font-weight-bold"> My EventBrite!</h1>
-    <div class="d-flex justify-content-between align-items-center mt-auto">
-
-      <p class="lead"> ❤️ Hacking events for you         <%= current_user.name if user_signed_in? %>      </p>
-      <a class="btn btn-lg btn-primary" href="<%= new_event_path %>"> Créer un nouvel événement</a>
-    </div>
-  </div>
-</div>
-
 <div class="album">
   <div class="container">
-    <h1> Liste des événements </h1>
+    <h1 class="mt-4"> Liste des événements </h1>
+    <a class="btn btn-lg btn-primary col-6 col-lg-4 my-5" href="<%= new_event_path %>"> Créer un nouvel événement</a>
     <div class="row">
       <%= render @events %>
     </div>
