--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -2,7 +2,7 @@
 <% content_for :main do %>
   <div class="container d-flex justify-content-center">
     <div class="col-lg-8">
-      <div class="card border-secondary text-<%=@devise_color or 'secondary'%>">
+      <div class="card my-5 border-dark text-<%=@devise_color or 'secondary'%>">
         <div class="card-header">
           <h4> <%= @devise_title or "Formulaire" %> </h4>
         </div>
