--- a/app/views/events/_event_full.html.erb
+++ b/app/views/events/_event_full.html.erb
@@ -1,5 +1,5 @@
-<div class="card border-primary mb-3 mt-4">
-  <div class="card-header text-success">
+<div class="card border-<%=@color or 'primary'%> mb-3 mt-4">
+  <div class="card-header text-<%=@color or 'primary'%>">
     <h4> <%= @event.title %> </h4>
   </div>
   <div class="card-img-top">
