--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,15 @@
 <div class="container mt-3">
 
   <%= render 'events/event_full'%>
-
-  <% if !user_signed_in? %>
-    <div class="alert alert-primary"> Connecte toi pour t'inscrire ! </div>
-  <% elsif @event.administrator?(current_user) %>
-    <%= link_to "Mon espèce événement", event_attendances_path(@event), :class => "nav-link btn btn-outline-primary" %>
-  <% elsif @event.attendee?(current_user) %>
-    <div class="alert alert-primary"> Tu es déjà inscrit </div>
-  <% else %>
-    <%= link_to "Rejoindre l'événement !", new_event_attendance_path(@event), :class => "nav-link btn btn-primary" %>
-  <% end %>
-
+  <div class="my-4">
+    <% if !user_signed_in? %>
+      <div class="alert alert-primary"> Connecte toi pour t'inscrire ! </div>
+    <% elsif @event.administrator?(current_user) %>
+      <%= link_to "Mon espèce événement", event_attendances_path(@event), :class => "nav-link btn btn-outline-primary" %>
+    <% elsif @event.attendee?(current_user) %>
+      <div class="alert alert-primary"> Tu es déjà inscrit </div>
+    <% else %>
+      <%= link_to "Rejoindre l'événement !", new_event_attendance_path(@event), :class => "nav-link btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
