--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,8 +8,14 @@
 
     <div class="collapse navbar-collapse ml-auto" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="<%= events_path %>"> Evénements </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownEvents" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Evénements
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownEvents">
+            <%= link_to "Tous les événements", events_path, class: "dropdown-item" %>
+            <%= link_to "Créer un événement", new_event_path, class: "dropdown-item" %>
+          </div>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
@@ -18,7 +24,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
               <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, :class => "dropdown-item" %>
-              <%= link_to "Mon compte", profile_path,:class => "dropdown-item" %>
+              <%= link_to "Mon compte", user_path(current_user), class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
