--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,51 +1,35 @@
 <div class="container">
-  <h2> Mon compte </h2>
+  <h2 class="py-4"> Mon compte </h2>
 
-  <div class="card border-success mb-3 mt-4">
+  <div class="card border-success">
     <div class="card-header text-success">
-      <h4> <%= @user.first_name %> <%= @user.last_name %> </h4>
+      <h4> <%= @user.name %> </h4>
     </div>
     <div class="card-body">
       <div class="row">
-        <div class="col-lg-3">
-          Prénom
-        </div>
-        <div class="col-lg-9">
-          <%= @user.first_name %>
-        </div>
+        <div class="col-lg-3">Prénom</div>
+        <div class="col-lg-9"><%= @user.first_name %></div>
       </div>
       <div class="row">
-        <div class="col-lg-3">
-          Nom
-        </div>
-        <div class="col-lg-9">
-          <%= @user.last_name %>
-        </div>
+        <div class="col-lg-3">Nom</div>
+        <div class="col-lg-9"><%= @user.last_name %></div>
       </div>
       <div class="row">
-        <div class="col-lg-3">
-          Description
-        </div>
-        <div class="col-lg-9">
-          <%= @user.description %>
-        </div>
+        <div class="col-lg-3">Description</div>
+        <div class="col-lg-9"><%= @user.description %></div>
       </div>
       <div class="row">
-        <div class="col-lg-3">
-          EMail
-        </div>
-        <div class="col-lg-9">
-          <%= @user.email %>
-        </div>
+        <div class="col-lg-3">EMail</div>
+        <div class="col-lg-9"><%= @user.email %></div>
       </div>
     </div>
   </div>
-  <%= link_to "Modifier mon compte", edit_user_registration_path,:class => "nav-link btn btn-outline-primary text-black btn-sm" %>
+  <%= link_to "Modifier mon compte", edit_user_registration_path,:class => "nav-link btn btn-success my-3" %>
 </div>
 
 <div class="album">
   <div class="container">
-    <h2> Mes événements </h2>
+    <h2 class="py-4"> Mes événements (<%= @user.events.size%>)</h2>
     <div class="row">
       <%= render @user.events %>
     </div>
