--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,30 @@
 <div class="container">
-  <div class="card border-primary mb-3 mt-4">
+  <h2 class="py-4"> Profil </h2>
+
+  <div class="card border-primary">
     <div class="card-header text-primary">
-      <h4> <%= @user.first_name %> <%= @user.last_name %> </h4>
+      <h4> <%= @user.name %> </h4>
     </div>
     <div class="card-body">
-      <p class="card-text"> <%= @user.description %> </p>
+      <div class="row">
+        <div class="col-lg-3">Prénom</div>
+        <div class="col-lg-9"><%= @user.first_name %></div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">Nom</div>
+        <div class="col-lg-9"><%= @user.last_name %></div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">Description</div>
+        <div class="col-lg-9"><%= @user.description %></div>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="album">
   <div class="container">
-    <h2> Ses événements </h2>
+    <h2 class="py-4"> Ses événements (<%= @user.events.size%>)</h2>
     <div class="row">
       <%= render @user.events %>
     </div>
